[추가] iso8601 decoding 방법 추가

--- a/iOS/2018-09.md
+++ b/iOS/2018-09.md
@@ -95,7 +95,15 @@ decoder.dateDecodingStrategy = .iso8601
 
 이렇게 하면 Date로 들어간다고 했는데 왜인지 되지 않는다..
 
-왜 안되지ㅠㅠ 다시 알아보자
 
 
+분명히 iso8601 형식이 맞는데 왜 안되는지는 모르겠지만 우선 해결은 했다.
+
+DateFormatter를 사용해서 해결했다
+
+```swift
+let dateformatter = DateFormatter()
+self.dateFormatter.dateFormat = "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'"
+decoder.dateDecodingStrategy = .formatted(self.dateFormatter)
+```
 
