--- a/iOS/2018-09.md
+++ b/iOS/2018-09.md
@@ -102,6 +102,8 @@ decoder.dateDecodingStrategy = .iso8601
 이렇게 하면 Date로 들어간다고 했는데 왜인지 되지 않는다..
 
 
+
+
 분명히 iso8601 형식이 맞는데 왜 안되는지는 모르겠지만 우선 해결은 했다.
 
 DateFormatter를 사용해서 해결했다
@@ -111,5 +113,82 @@ let dateformatter = DateFormatter()
 self.dateFormatter.dateFormat = "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'"
 decoder.dateDecodingStrategy = .formatted(self.dateFormatter)
 ```
+
+<br>
+
+<br>
+
+##Realm
+
+realm에 대한 문제라서 여기에 적어도 되나 싶지만 어차피 iOS니까 그냥 적겠음.
+
+버튼을 선택하면 realm의  bool 값을 가진 attribute를 바꿔주도록 하는 기능을 만들고 있었는데 여기에서 삽질을 했다,,
+
+우선 realm에서 subset attribute만 update를 하려면 약간 이상하지만 **create**를 써야한다.
+
+https://realm.io/docs/swift/latest/#updating-objects
+
+```swift
+let realm = try! Realm()
+try! realm.write {
+	realm.create(Team.self, value: ["id": id, "heart": heart], update: true)
+}
+// "name" attriubte는 변경되지 않고 그대로 유지된다.
+```
+
+
+
+####해결방법
+
+1. **object를 사용.**
+
+나는 원래
+
+```swift
+let realm = try! Realm()
+var items: Results<Match>?
+let query = items?.filter("id == %@",sender.tag)[0]
+```
+
+이렇게 사용했었는데 이 방법으로 하니 nil이 나왔다ㅠㅠ..
+
+그래서 realm.object에서 Team을 불러내도록 바꾸었다.
+
+<br>
+
+2. **index 적어주기 - [0] 붙여주기**
+
+```swift
+print(realm.objects(Team.self).filter("id == %@",sender.tag))
+```
+
+
+
+위의 결과는 다음과 같다.
+
+```
+Results<Team> <0x7fb8b9b51780> (
+	[0] Team {
+		id = 1;
+		name = Afreeca;
+		heart = 0;
+	}
+)
+```
+
+따라서 [0]을 붙여줘야한다.
+
+
+
+<br>
+
+**완성된 것**
+
+sender tag로 받은 id 값을 가진 튜플의 heart값을 가져오는 쿼리 
+
+```swift
+let heart = realm.objects(Team.self).filter("id == %@",sender.tag)[0].value(forKeyPath: "heart") as? Bool
+```
+
 
 
